--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🏄 Surfe Notes</title>
+    <meta name="description" content="Frontend challenge web app for Surfe." />
   </head>
   <body>
     <div id="app"></div>
